--- a/estilo.css
+++ b/estilo.css
@@ -441,6 +441,7 @@ color: white;
 	#closeContainerKey{
 		right: 1%;
 		top: 5%;
+		padding: 10px;
 		float: right;
 	}
 #containerKeys {
@@ -451,7 +452,6 @@ color: white;
 }
 .push {
 	padding: 5px;
-	border: solid 3px royalblue;
 	display: block;
 	flex-direction: column;
 	align-items: flex-start;
