--- a/estilo.css
+++ b/estilo.css
@@ -42,6 +42,7 @@ body{
 	background-color:#1c2833;
 	width: 60%;
 	height: auto;
+	min-height: 50%;
 	max-height: 100%;
 	z-index: 40000;
 	border-radius: 15px;
