--- a/estilo.css
+++ b/estilo.css
@@ -20,14 +20,14 @@ body{
 /* ///////////////////// container key */
 #closeContainerKey{
 	position: sticky;
-	left:-5%;
-	margin-left:-15%;
-	top: 50%;
-	transform: translate(-5%,-50%);
+	right:1%;
+	top: 1%;
+	float: right;
 	background-color:royalblue;
 	border-radius: 15px;
 	border: none;
 	cursor: pointer;
+	z-index: 41000;
 }
 #containerKeys{
 	scroll-behavior: smooth;
@@ -40,7 +40,8 @@ body{
 	padding: 10px;
 	padding-left: 60px;
 	background-color:#1c2833;
-	width: 60%;
+	width:auto;
+	max-width: 100%;
 	height: auto;
 	min-height: 50%;
 	max-height: 100%;
