--- a/estilo.css
+++ b/estilo.css
@@ -36,6 +36,12 @@ body{
 	cursor: pointer;
 	z-index: 41000;
 }
+.one {
+	background-color: white;
+}
+.two {
+	background-color: #1c2833;
+}
 #containerKeys{
 	scroll-behavior: smooth;
 	overflow: auto;
@@ -178,7 +184,7 @@ body{
 }
 /* ///////////////////////////////push container///////////////////////////////////// */
 #pushContainer{
-	background-color: #1c2833;
+	/* background-color: #1c2833; */
 	display: flex;
 	justify-content: center;
 	flex-direction: column;
@@ -199,6 +205,8 @@ body{
 	width: auto;
 	box-shadow: 0 0 5px rgb(0,0,0, 0.4);
 	max-width: 80%;
+	background-color: white;
+
 	border: solid 3px transparent;
 }
 .push:hover{
@@ -442,6 +450,10 @@ color: white;
 
 }
 @media only screen and (max-width:686px){
+.two {
+	background-color: transparent!important;
+}
+
 	#noKeys {
 		flex-direction: column;
 	}
@@ -477,15 +489,17 @@ color: white;
 	}
 #containerKeys {
 	animation: none;
-
+    height: 100%;
 	width: 100%;
 	padding-left: 5%;
+	backdrop-filter: blur(5px);
 }
 .push {
 	padding: 5px;
 	display: block;
 	flex-direction: column;
 	align-items: flex-start;
+	background-color: white;
 
 }
 .push p {width: auto;max-width: 100%;}
