Arreglo de bug en container key

--- a/estilo.css
+++ b/estilo.css
@@ -17,6 +17,11 @@ body{
 	transform: translate(-50%,-50%);
 	background:transparent;
 }
+.commitPush{
+	background-color: royalblue!important;
+	color: white!important;
+	text-align: center;
+}
 #creator {
 	position: fixed;
 	left: 1%;
