--- a/estilo.css
+++ b/estilo.css
@@ -559,7 +559,7 @@ color: white;
 	/* background-color: white; */
     /* backdrop-filter:blur(130px); */
 }
-.push p {width: auto;max-width: 100%;background-color: white;color: black;margin: 20px;display: inline-block;}
+.push p {width: auto;max-width: 100%;background-color: transparent;color: rgb(255, 255, 255);margin: 20px;display: inline-block;}
 	nav{
 	background:ghostwhite;
 	color:black;
