--- a/estilo.css
+++ b/estilo.css
@@ -546,7 +546,7 @@ color: white;
 	scrollbar-width: thin;
 }
 #containerKeys {
-	background-color: white!important;
+	/* background-color: white!important; */
 	animation: none;
     height: 100%;
 	width: 100%;
@@ -562,7 +562,7 @@ color: white;
 	/* background-color: white; */
     /* backdrop-filter:blur(130px); */
 }
-.push p {width: auto;max-width: 100%;background-color: transparent;color: rgb(0, 0, 0);margin: 20px;display: inline-block;}
+.push p {width: auto;max-width: 100%;background-color: transparent;color: rgb(255, 255, 255);margin: 20px;display: inline-block;}
 	nav{
 	background:ghostwhite;
 	color:black;
