--- a/estilo.css
+++ b/estilo.css
@@ -93,7 +93,7 @@ body{
 	background-color:transparent;
 }
 .prompts{margin-top: 2%;}
-#passwordView{color: white;font-size: 25px; margin-bottom: 1%;}
+#passwordView{color: white;font-size: 25px; margin-bottom: 1%; text-align: center;max-width: 90%;overflow: auto;scrollbar-width: thin;}
 #containerKeys{
 	overflow: auto;
 	overflow-x: hidden;
