--- a/estilo.css
+++ b/estilo.css
@@ -78,6 +78,9 @@ body{
 .two {
 	background-color: white!important;
 }
+#exitContainerView{
+	background-color:rgb(255, 0, 0);
+}
 #containerView {
 	position: absolute;
 	left: 50%;
@@ -93,7 +96,7 @@ body{
 	background-color:transparent;
 }
 .prompts{margin-top: 2%;}
-#passwordView{color: white;font-size: 25px; margin-bottom: 1%; text-align: center;max-width: 90%;overflow: auto;scrollbar-width: thin;}
+#passwordView{color: white;font-size: 25px; margin-bottom: 1%; text-align: left;max-width: 90%;overflow: auto;scrollbar-width: thin;min-width: 30%;min-height: 20%;}
 #containerKeys{
 	overflow: auto;
 	overflow-x: hidden;
