--- a/estilo.css
+++ b/estilo.css
@@ -76,7 +76,7 @@ body{
 	background-color: white!important;
 }
 .two {
-	background-color: white!important;
+	background-color: #1c2833;
 }
 #exitContainerView{
 	background-color:rgb(255, 0, 0);
