--- a/estilo.css
+++ b/estilo.css
@@ -16,6 +16,56 @@ body{
 	position: sticky;
 	top: 0;
 }
+#alertCommit {
+	transition: 0.4s;
+	opacity: 1;
+	width: auto;
+	z-index: 50000;
+	position: absolute;
+	left: 90%;
+	bottom:10%;
+	transform: translate(-90%,-10%);
+	background-color: white;
+	color: black;
+	padding: 10px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 15px;
+	animation: animationAlert 0.4s ease-in-out;
+	overflow: hidden;
+}
+@keyframes animationAlert {
+	0% {
+
+		background-color: red;
+		color:white;
+	}
+	100% {
+		width:auto;
+	}
+}
+#commentALERT {
+	white-space: nowrap;
+	position: relative;
+	overflow: none;
+	display: block;
+	width: 100%;
+	animation: animationAlertTXT 0.8s ease-in-out;
+}
+@keyframes animationAlertTXT {
+	0%{
+		display: none;
+		position: absolute;
+		top:-100px;
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+		position: relative;
+		display: inline-block;
+	}
+}
 #searchInput {
 	color: white;
 	width: auto;
