--- a/estilo.css
+++ b/estilo.css
@@ -297,7 +297,8 @@ height: auto;
 overflow: hidden;
 }
 .push {
-	transition: 0.2s;
+	transform: none;
+	transition: 0.3s;
 	cursor: pointer;
 	border-radius: 10px;
 	display: flex;
