--- a/estilo.css
+++ b/estilo.css
@@ -148,6 +148,7 @@ body{
 .prompts{margin-top: 2%;}
 #passwordView{color: white;font-size: 25px; margin-bottom: 1%; text-align: left;max-width: 90%;overflow: auto;scrollbar-width: thin;min-width: 30%;min-height: 20%;}
 #containerKeys{
+
 	overflow: auto;
 	overflow-x: hidden;
 	position: absolute;
@@ -162,7 +163,7 @@ body{
 	max-width: 100%;
 	height: auto;
 	min-height: 50%;
-	max-height: 100%;
+	max-height: 70%;
 	z-index: 40000;
 	border-radius: 15px;
 	/* animation: animationPushContainer 0.2s ease-in-out; */
@@ -300,7 +301,7 @@ overflow: hidden;
 	transform: none;
 	transition: 0.3s;
 	cursor: pointer;
-	border-radius: 10px;
+	border-radius: 0px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -308,13 +309,15 @@ overflow: hidden;
 	color: white;
 	margin: 10px;
 	width: auto;
-	box-shadow: 0 0 5px rgb(0,0,0, 0.4);
 	max-width: 80%;
 	/* background-color: white; */
-
+   
 	border: solid 3px transparent;
+	border-left:solid 3px royalblue;
 }
 .push:hover{
+	border-radius: 10px;
+
 	border: solid 3px royalblue;
 	box-shadow: 0 0 15px transparent;
 
@@ -601,9 +604,15 @@ color: white;
 		cursor: pointer;
 	}
 .containerPush{
-	height: 80%;
+	height: 90%;
 	overflow: auto;
 	scrollbar-width: thin;
+	position: relative;
+	position: absolute;
+	left: 50%;
+	top: 100%;
+	width: 100%;
+	transform: translate(-50%,-100%);
 }
 #containerKeys {
 	/* background-color: white!important; */
@@ -612,6 +621,7 @@ color: white;
 	width: 100%;
 	padding-left: 5%;
 	backdrop-filter: blur(5px);
+	max-height: 100%;
 }
 .push {
 	padding: 5px;
