--- a/estilo.css
+++ b/estilo.css
@@ -146,7 +146,7 @@ body{
 	background-color:transparent;
 }
 .prompts{margin-top: 2%;}
-#passwordView{color: white;font-size: 25px; margin-bottom: 1%; text-align: left;max-width: 90%;overflow: auto;scrollbar-width: thin;min-width: 30%;min-height: 20%;}
+#passwordView{color: white;font-size: 25px; margin-bottom: 18%; border-left: solid 4px royalblue; padding-left: 15px; text-align: left;max-width: 90%;overflow: auto;scrollbar-width: thin;min-width: 30%;min-height: 20%;}
 #containerKeys{
 
 	overflow: auto;
