--- a/estilo.css
+++ b/estilo.css
@@ -15,6 +15,24 @@ body{
 	position: sticky;
 	top: 0;
 }
+#commentSegurity{
+	padding: 10px;
+}
+#passwordSecurity{
+	margin-top: 2%;
+}
+#rangeSecurity {
+	width: 10%;
+	transition: 0.6s;
+	border-radius: 15px;
+	background-color: rgb(0, 255, 81);
+	padding: 5px;
+
+}
+.iconsegurity{
+	color: royalblue;
+	font-size: 25px;
+}
 #alertCommit {
 	transition: 0.4s;
 	opacity: 1;
@@ -558,6 +576,7 @@ color: white;
 
 }
 @media only screen and (max-width:686px){
+	.iconsegurity{color: white;}
 #containerView{
 	width: 100%;
 }
